--- a/study/数字识别-基于卷积分类.ipynb
+++ b/study/数字识别-基于卷积分类.ipynb
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "outputs": [
     {
      "name": "stdout",
@@ -168,7 +168,15 @@
       "当前epoch: 1 [51200/60000 (85%)]\t损失: 0.001072\t训练集准确率: 98.63%\t测试集正确率: 98.73%\n",
       "当前epoch: 1 [57600/60000 (96%)]\t损失: 0.009767\t训练集准确率: 98.65%\t测试集正确率: 98.71%\n",
       "当前epoch: 2 [0/60000 (0%)]\t损失: 0.040965\t训练集准确率: 98.44%\t测试集正确率: 98.46%\n",
-      "当前epoch: 2 [6400/60000 (11%)]\t损失: 0.019689\t训练集准确率: 99.32%\t测试集正确率: 98.98%\n"
+      "当前epoch: 2 [6400/60000 (11%)]\t损失: 0.019689\t训练集准确率: 99.32%\t测试集正确率: 98.98%\n",
+      "当前epoch: 2 [12800/60000 (21%)]\t损失: 0.028466\t训练集准确率: 99.24%\t测试集正确率: 98.67%\n",
+      "当前epoch: 2 [19200/60000 (32%)]\t损失: 0.157253\t训练集准确率: 99.17%\t测试集正确率: 99.16%\n",
+      "当前epoch: 2 [25600/60000 (43%)]\t损失: 0.001020\t训练集准确率: 99.17%\t测试集正确率: 99.07%\n",
+      "当前epoch: 2 [32000/60000 (53%)]\t损失: 0.028980\t训练集准确率: 99.15%\t测试集正确率: 98.92%\n",
+      "当前epoch: 2 [38400/60000 (64%)]\t损失: 0.033370\t训练集准确率: 99.19%\t测试集正确率: 99.01%\n",
+      "当前epoch: 2 [44800/60000 (75%)]\t损失: 0.015125\t训练集准确率: 99.16%\t测试集正确率: 99.18%\n",
+      "当前epoch: 2 [51200/60000 (85%)]\t损失: 0.000405\t训练集准确率: 99.16%\t测试集正确率: 99.10%\n",
+      "当前epoch: 2 [57600/60000 (96%)]\t损失: 0.090765\t训练集准确率: 99.16%\t测试集正确率: 98.35%\n"
      ]
     }
    ],
@@ -213,11 +221,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2025-04-06T01:33:51.757335Z",
-     "end_time": "2025-04-06T01:39:45.005945Z"
-    },
-    "pycharm": {
-     "is_executing": true
+     "start_time": "2025-04-06T01:40:38.767613Z",
+     "end_time": "2025-04-06T01:46:26.257055Z"
     }
    }
   }
