feat:program->基于lstm rnn文本分类

--- a/test/GPUtest.ipynb
+++ b/test/GPUtest.ipynb
@@ -67,6 +67,33 @@
     }
    ],
    "execution_count": 1
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-10T08:22:49.551953Z",
+     "start_time": "2025-04-10T08:22:45.541475Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "import torch\n",
+    "print(torch.cuda.is_available())  # 返回True表示GPU可用‌:ml-citation{ref=\"1,3\" data=\"citationList\"}\n",
+    "print(torch.cuda.device_count())  # 显示可用GPU数量‌:ml-citation{ref=\"2,4\" data=\"citationList\"}\n",
+    "print(torch.cuda.get_device_name(0))  # 显示第一个GPU的名称‌:ml-citation{ref=\"3,4\" data=\"citationList\"}"
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "1\n",
+      "NVIDIA GeForce GTX 1060 6GB\n"
+     ]
+    }
+   ],
+   "execution_count": 1
   }
  ],
  "metadata": {
