feat:flask test

--- a/test/GPUtest.ipynb
+++ b/test/GPUtest.ipynb
@@ -94,6 +94,27 @@
     }
    ],
    "execution_count": 1
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-11T02:34:58.677715Z",
+     "start_time": "2025-04-11T02:33:35.037498Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "^C\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "execution_count": 2
   }
  ],
  "metadata": {
